recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:13: error: Int does not take parameters
    current(steps())
                 ^